--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-serializer-meta",
+  "name": "ember-json-serializer-meta",
   "dependencies": {
     "ember": "2.2.0",
     "ember-cli-shims": "0.0.6",
