chore: Bump version and update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-json-serializer-meta",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.1.0",
+  "description": "Extract metadata support for JSONSerializer query responses.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -39,7 +39,11 @@
     "ember-try": "~0.0.8"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "json",
+    "metadata",
+    "extract",
+    "serializer"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5"
