--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
     "type": "git",
     "url": "https://github.com/raido/ember-json-serializer-meta"
   },
-  "engines": {
-    "node": ">= 0.10.0"
-  },
   "author": {
     "name": "Raido Kuli",
     "email": "raido357@gmail.com"
   },
   "license": "MIT",
+  "dependencies": {
+    "ember-cli-babel": "^6.0.0-beta.3"
+  },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-cli": "2.8.0",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-cli": "2.13.0-beta.4",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "3.0.0",
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-qunit": "^2.1.0",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-sri": "^2.1.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0-beta.2",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0-beta.1",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.8.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "eslint-plugin-ember-suave": "^1.0.0",
-    "loader.js": "^4.0.1"
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.13.0-beta.2",
+    "ember-welcome-page": "^3.0.0",
+    "loader.js": "^4.2.3"
   },
   "keywords": [
     "ember-addon",
@@ -52,8 +52,8 @@
     "extract",
     "serializer"
   ],
-  "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+  "engines": {
+    "node": ">= 4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
